# speaking-english-ai

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8f484ecc4ec6_init_schema.py  add_roles_user_role.py  add_session_messages.py  add_session_opening_audio_path.py  add_session_opening_message.py  add_topic_guidance.py  add_topic_roadmap.py  add_topic_unit_max_scored_turns.py  add_turn_guideline.py  add_user_tts_prefs.py  d33244c6d297_add_learning_pack_json_columns.py  drop_topic_guidance.py  drop_turns_scores_tables.py  fix_seed_admin_email_localhost.py  seed_admin_user.py  use_timestamptz.py
backend/app/: config.py  main.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  conversation.py  conversation_audio.py  conversation_handler.py  guidance.py  messages.py  progress.py  sessions.py  topics.py  tts.py  users.py
backend/app/core/: config.py  deps.py  ielts_levels.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: conversation.py  conversation_common.py  role.py  session.py  session_message.py  topic.py  topic_unit.py  user.py  user_topic_unit_progress.py
backend/app/routers/: auth.py  conversation.py  progress.py  topics.py
backend/app/schemas/: __init__.py  admin.py  auth.py  conversation.py  learning_pack.py  progress.py  roadmap.py  topic.py  user.py
backend/app/services/: conversation_session_finalize.py  learning_pack_service.py  lm_client.py  scoring_service.py  stt_service.py  topic_roadmap_service.py  tts_service.py
backend/audio/1/1/: turn_0_user.webm
backend/audio/1/12/: turn_0_user.webm  turn_1_user.webm
backend/audio/1/15/: turn_0_user.webm  turn_1_user.webm
backend/audio/1/16/: turn_0_user.webm  turn_1_user.webm
backend/audio/1/18/: turn_0_user.webm  turn_1_user.webm
backend/audio/1/19/: turn_0_user.webm
backend/audio/1/2/: turn_0_user.webm
backend/audio/1/20/: turn_0_user.webm
backend/audio/1/21/: turn_0_user.webm  turn_1_user.webm  turn_2_user.webm  turn_3_user.webm
backend/audio/1/22/: turn_0_user.webm
backend/audio/1/23/: turn_0_user.webm
backend/audio/1/27/: turn_0_user.webm
backend/audio/1/3/: turn_0_user.webm
backend/audio/1/30/: turn_0_user.webm
backend/audio/1/31/: turn_0_user.webm
backend/audio/1/5/: turn_0_user.webm
backend/audio/1/6/: turn_0_user.webm
backend/audio/1/7/: turn_0_user.webm  turn_1_user.webm
backend/audio/1/8/: turn_0_user.webm  turn_1_user.webm
backend/audio/1/9/: turn_0_user.webm
backend/docs/: learning-pack-rollout.md
backend/scripts/: create_pg_db.py
backend/tests/services/: test_learning_pack_service.py
(+194 files in other folders)
